<resources>
    <string name="app_name">FoodGauge</string>
    <string name="iniciar">Iniciar</string>
    <string name="foodgauge">FoodGauge</string>
    <string name="detalles_de_temperatura">Detalles de Temperatura</string>
    <string name="temperatura_actual_del_agua_15_c">Temperatura actual del agua: 15 °C</string>
    <string name="temperatura_recomendada_20_c">Temperatura recomendada: 20 °C</string>
    <string name="temperatura_del_ambiente_22_c">Temperatura del ambiente: 22 °C</string>
    <string name="volver">volver</string>
    <string name="estados_generales">Estados generales</string>
    <string name="rellenar_comida">Rellenar Comida</string>
    <string name="temperatura">Temperatura</string>
    <string name="detalles">Detalles</string>
    <string name="agua">Agua</string>
    <string name="_50_ml">50 mL</string>
    <string name="rellenar_agua">Rellenar Agua</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="confirmar_nueva_contrase_a">Confirmar Nueva Contraseña</string>
    <string name="nueva_contrase_a">Nueva Contraseña</string>
    <string name="contrase_a_actual">Contraseña Actual</string>
</resources>